--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "fastify-helmet": "^7.0.1",
     "fastify-jwt": "^4.1.3",
     "jsonwebtoken": "^9.0.2",
+    "mjml": "^4.15.3",
     "mongoose": "^8.14.1",
     "nodemailer": "^6.10.1"
   },
