--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@tabler/core": "^1.2.0",
     "axios": "^1.9.0",
+    "i18next": "^25.0.2",
+    "i18next-browser-languagedetector": "^8.1.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-i18next": "^15.5.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "bootstrap": "^5.3.5",
     "typescript": "^5"
   }
 }
