--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mjml": "^4.15.3",
     "mongoose": "^8.14.1",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^22.15.3"
