--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@tabler/core": "^1.2.0",
+    "@tabler/icons-react": "^3.31.0",
     "axios": "^1.9.0",
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.1.0",
