--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "next-auth": "^4.24.11",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.5.1",
     "yup": "^1.6.1"
   },
